crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_assoc_type_name.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Iterator[i] { type item }"
---
AssocType(
    1,
    26,
)
