crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_bad_item.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show[a] { let x = 1 }"
---
Item(
    1,
    17,
)
