crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_fn.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show[a] { fn (value: a) -> String }"
---
Fn(
    Name(
        1,
        20,
    ),
    1,
    17,
)
