crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_no_name.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait [a] {}"
---
Name(
    1,
    7,
)
