crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_no_params.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show {"
---
Params(
    Open(
        1,
        12,
    ),
    1,
    12,
)
