crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_open.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show[a] fn"
---
Open(
    1,
    15,
)
