crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_same_line_after_body.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show[a] {\n    fn show(value: a) String { \"?\" } fn other(value: a) String\n}\n"
---
SameLine(
    2,
    38,
)
