crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_same_line_items.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Iterator[i] { type Item fn next(it: i) -> Item }"
---
SameLine(
    1,
    31,
)
