crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_semicolon_between_items.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Iterator[i] { type Item; fn next(it: i) -> Option[Item] }"
---
Semicolon(
    1,
    30,
)
