crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_unclosed.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show[a] {\n    fn show(value: a) -> String\n"
---
Item(
    3,
    1,
)
