crates/alder-parse/src/item/snapshots/alder_parse__item__trait___tests__error_unclosed_empty_body.snap
---
source: crates/alder-parse/src/item/trait_.rs
description: "trait Show[a] {"
---
Item(
    1,
    16,
)
